update API docs and api url
